force-app/main/default/objects/et4ae5__AggregateLink__c/et4ae5__AggregateLink__c.object-meta.xml
<CustomObject>
    <description>This object is used to store the Aggregate Level Link Details for each email send</description>
    <label>Aggregate Link Level Detail</label>
    <nameField>
        <label>Link Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Aggregate Link Level Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>