force-app/main/default/objects/et4ae5__AggregateLink__c/fields/et4ae5__Last_Clicked__c.field-meta.xml
<CustomField>
    <fullName>et4ae5__Last_Clicked__c</fullName>
    <inlineHelpText>The date and time this link was last clicked</inlineHelpText>
    <label>Last Clicked</label>
    <type>DateTime</type>
</CustomField>