force-app/main/default/objects/et4ae5__AggregateLink__c/fields/et4ae5__LinkURL__c.field-meta.xml
<CustomField>
    <fullName>et4ae5__LinkURL__c</fullName>
    <label>Link URL</label>
    <type>Url</type>
</CustomField>