force-app/main/default/objects/et4ae5__AggregateLink__c/fields/et4ae5__NumberOfTotalClicks__c.field-meta.xml
<CustomField>
    <fullName>et4ae5__NumberOfTotalClicks__c</fullName>
    <inlineHelpText>The aggregate number of times this link has been clicked</inlineHelpText>
    <label>Number of Total Clicks</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>