force-app/main/default/objects/et4ae5__AggregateLink__c/fields/et4ae5__NumberOfUniqueClicks__c.field-meta.xml
<CustomField>
    <fullName>et4ae5__NumberOfUniqueClicks__c</fullName>
    <inlineHelpText>The aggregate unique number of times this link has been clicked (unique means one click per subscriber)</inlineHelpText>
    <label>Number of Unique Clicks</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>