force-app/main/default/objects/et4ae5__AggregateLink__c/fields/et4ae5__TriggeredSendDefinition__c.field-meta.xml
<CustomField>
    <fullName>et4ae5__TriggeredSendDefinition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Triggered Send</label>
    <referenceTo>et4ae5__Automated_Send__c</referenceTo>
    <relationshipLabel>Aggregate Link Level Details</relationshipLabel>
    <relationshipName>Aggregate_Link_Level_Details</relationshipName>
    <type>Lookup</type>
</CustomField>